# flexismart-matcher

./: README.md  mock_bank.json  mock_invoices.json  pyproject.toml
docs/: ABRA_FLEXI_Dokumentace_REST_API_Obsah.md  FlexiSmart_Matcher_Navrh.md  flexi_examples.json
mock_api/: mock_bank.json  mock_invoices.json  server.py
src/: app.py  flexi_client.py  init_db.py  matcher.py  models.py  sync.py
tests/: test_date_parsing.py  test_integration.py  test_matcher.py
tools/: anonymizer.py  exporter.py  unaccent.py
